--- a/conf/dhcpd.conf
+++ b/conf/dhcpd.conf
@@ -4,12 +4,12 @@
 # Facebook: facebook.com/BoraParaPratica
 # YouTube: youtube.com/BoraParaPratica
 # Data de criação: 31/05/2016
-# Data de atualização: 17/07/2021
-# Versão: 0.12
+# Data de atualização: 17/09/2021
+# Versão: 0.13
 # Testado e homologado para a versão do Ubuntu Server 18.04 LTS x64
 # Kernel >= 4.15.x
 
-# Configuração Global do ISC DHCP Server
+# Configurações Globais do ISC DHCP Server
 authoritative;
 default-lease-time 14400;
 max-lease-time 18000;
@@ -24,7 +24,7 @@ update-conflict-detection off;
 # Configuração do Log do ISC DHCP Server
 log-facility local7;
 #
-# Resolve a falha do Syslog de informações do DHCPINFORM e DHCPACK do Win7
+# Resolvendo a falha do Syslog de informações do DHCPINFORM e DHCPACK do Win7
 option wpad code 252 = text;
 #
 # Configurações da integração do Bind9 DNS Server
