--- a/scripts/conf/firewall.conf
+++ b/scripts/conf/firewall.conf
@@ -9,5 +9,6 @@
 # Versão: 0.1
 # Testado e homologado para a versão do Ubuntu Server 16.04 LTS x64
 # Kernel >= 4.4.x
-
+#
+# Kern: mensagem vinda do núcleo, Warn: aviso (erro potencial)
 kern.warn /var/log/firewall.log
