--- a/scripts/conf/firewall.service
+++ b/scripts/conf/firewall.service
@@ -4,9 +4,10 @@ Documentation=man:iptables(8)
 
 [Service]
 ExecStart=/usr/bin/firewall start
-ExecStop=/usr/bin/firewall stop
-ExecReload=/usr/bin/firewall restart
-ExecRestart=/usr/bin/firewall restart
+#Variáveis comentadas devido a falha de execução do serviço
+#ExecStop=/usr/bin/firewall stop
+#ExecReload=/usr/bin/firewall restart
+#ExecRestart=/usr/bin/firewall restart
 
 [Install]
 WantedBy=multi-user.target
