--- a/scripts/conf/apache2.conf
+++ b/scripts/conf/apache2.conf
@@ -3,19 +3,24 @@
 # Facebook: facebook.com/ProcedimentosEmTI
 # Facebook: facebook.com/BoraParaPratica
 # YouTube: youtube.com/BoraParaPratica
-# Data de criação: 04/11/2018
-# Data de atualização: 23/07/2020
-# Versão: 0.02
-# Testado e homologado para a versão do Ubuntu Server 18.04.x LTS x64
-# Kernel >= 4.15.x
+# Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
+# Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
+# Data de criação: 15/10/2021
+# Data de atualização: 15/10/2021
+# Versão: 0.01
+# Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 
-# Configurações Globais
+# Configurações Globais do Apache2
 
 # ServerRoot: The top of the directory tree under which the server's
+# configuration, error, and log files are kept.
 #ServerRoot "/etc/apache2"
 
 # The accept serialization lock file MUST BE STORED ON A LOCAL DISK.
-Mutex file:${APACHE_LOCK_DIR} default
+#Mutex file:${APACHE_LOCK_DIR} default
+
+# The directory where shm and other runtime files will be stored.
+DefaultRuntimeDir ${APACHE_RUN_DIR}
 
 # PidFile: The file in which the server should record its process
 # identification number when it starts.
@@ -42,12 +47,25 @@ User ${APACHE_RUN_USER}
 Group ${APACHE_RUN_GROUP}
 
 # HostnameLookups: Log the names of clients or just their IP addresses
+# e.g., www.apache.org (on) or 204.62.129.132 (off).
+# The default is off because it'd be overall better for the net if people
+# had to knowingly turn this feature on, since enabling it means that
+# each client request will result in AT LEAST one lookup request to the
+# nameserver.
 HostnameLookups Off
 
 # ErrorLog: The location of the error log file.
+# If you do not specify an ErrorLog directive within a <VirtualHost>
+# container, error messages relating to that virtual host will be
+# logged here.  If you *do* define an error logfile for a <VirtualHost>
+# container, that host's errors will be logged there and not here.
 ErrorLog ${APACHE_LOG_DIR}/error.log
 
 # LogLevel: Control the severity of messages logged to the error_log.
+# Available values: trace8, ..., trace1, debug, info, notice, warn,
+# error, crit, alert, emerg.
+# It is also possible to configure the log level for particular modules, e.g.
+# "LogLevel info ssl:warn"
 LogLevel warn
 
 # Include module configuration:
@@ -57,7 +75,12 @@ IncludeOptional mods-enabled/*.conf
 # Include list of ports to listen on
 Include ports.conf
 
-# Sets the default security model of the Apache2 HTTPD server.
+# Sets the default security model of the Apache2 HTTPD server. It does
+# not allow access to the root filesystem outside of /usr/share and /var/www.
+# The former is used by web applications packaged in Debian,
+# the latter may be used for local directories served by the web server. If
+# your system is serving content from a sub-directory in /srv you must allow
+# access here, or in any related virtual host.
 <Directory />
 	Options FollowSymLinks
 	AllowOverride None
@@ -82,6 +105,8 @@ Include ports.conf
 #</Directory>
 
 # AccessFileName: The name of the file to look for in each directory
+# for additional configuration directives.  See also the AllowOverride
+# directive.
 AccessFileName .htaccess
 
 # The following lines prevent .htaccess and .htpasswd files from being
@@ -92,6 +117,12 @@ AccessFileName .htaccess
 
 # The following directives define some format nicknames for use with
 # a CustomLog directive.
+# These deviate from the Common Log Format definitions in that they use %O
+# (the actual bytes sent including headers) instead of %b (the size of the
+# requested file), because the latter makes it impossible to detect partial
+# requests.
+# Note that the use of %{X-Forwarded-For}i instead of %h is not recommended.
+# Use mod_remoteip instead.
 LogFormat "%v:%p %h %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\"" vhost_combined
 LogFormat "%h %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\"" combined
 LogFormat "%h %l %u %t \"%r\" %>s %O" common
