--- a/scripts/conf/000-default.conf
+++ b/scripts/conf/000-default.conf
@@ -3,29 +3,37 @@
 # Facebook: facebook.com/ProcedimentosEmTI
 # Facebook: facebook.com/BoraParaPratica
 # YouTube: youtube.com/BoraParaPratica
-# Data de criação: 31/05/2016
-# Data de atualização: 24/03/2017
-# Versão: 0.7
-# Testado e homologado para a versão do Ubuntu Server 18.04 LTS x64
-# Kernel >= 4.15.x
+# Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
+# Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
+# Data de criação: 18/10/2021
+# Data de atualização: 18/10/2021
+# Versão: 0.01
+# Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
+# Testado e homologado para a versão do
 
 #Configuração do Virtual Host padrão do Apache na porta 80
 <VirtualHost *:80>
+	
 	#Email do administrador
 	ServerAdmin webmaster@pti.intra
+	
 	#Pasta raiz da hospedagem
 	DocumentRoot /var/www/html
+	
 	#Configuração dos arquivos de log
 	ErrorLog ${APACHE_LOG_DIR}/error.log
 	CustomLog ${APACHE_LOG_DIR}/access.log combined
+	
 	#Configuração dos alias do software AWStats (estátisticas do apache)
 	Alias /awstatsclasses "/usr/share/awstats/lib/"
 	Alias /awstats-icon "/usr/share/awstats/icon/"
 	Alias /awstatscss "/usr/share/doc/awstats/examples/css"
+	
 	#Configuração do alias de script CGI
 	ScriptAlias /cgi-bin/ /usr/lib/cgi-bin/
 	ScriptAlias /awstats/ /usr/lib/cgi-bin/
 	Options +ExecCGI -MultiViews +SymLinksIfOwnerMatch
+	
 	#Subdiretório das configurações do AWStats
 	<Directory "/usr/local/awstats/wwwroot">
 		Options None
@@ -33,5 +41,6 @@
 		Order allow,deny
 		Allow from all
 	</Directory>
+
 </VirtualHost>
 # vim: syntax=apache ts=4 sw=4 sts=4 sr noet
