--- a/scripts/conf/default-ssl.conf
+++ b/scripts/conf/default-ssl.conf
@@ -1,21 +1,21 @@
 # Autor: Robson Vaamonde
-# Script utilizado no Curso de OCS Inventory Server
 # Site: www.procedimentosemti.com.br
 # Facebook: facebook.com/ProcedimentosEmTI
 # Facebook: facebook.com/BoraParaPratica
 # YouTube: youtube.com/BoraParaPratica
-# Data de criação: 25/05/2021
-# Data de atualização: 04/06/2021
-# Versão: 0.4
-# Testado e homologado para a versão do Ubuntu Server 18.04 LTS x64
-# Kernel >= 4.15.x
+# Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
+# Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
+# Data de criação: 18/10/2021
+# Data de atualização: 18/10/2021
+# Versão: 0.01
+# Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 
 <IfModule mod_ssl.c>
 
-	#Configuração do Virtual Host do Apache2 com suporte ao SSL na porta 443
+	#Configuração do Virtual Host do Apache2 com suporte ao TLS/SSL na porta 443
 	<VirtualHost _default_:443>
 
-		#Configuração do Nome de Domínio
+		#Configuração do Nome de Domínio e dos Apelidos
 		ServerName pti.intra
 		ServerAlias 172.16.1.20
   		ServerAlias ptispo01ws01
