--- a/scripts/conf/pti-intra.conf
+++ b/scripts/conf/pti-intra.conf
@@ -3,11 +3,13 @@
 # Facebook: facebook.com/ProcedimentosEmTI
 # Facebook: facebook.com/BoraParaPratica
 # YouTube: youtube.com/BoraParaPratica
-# Data de criação: 04/11/2018
-# Data de atualização: 28/05/2021
-# Versão: 0.03
-# Testado e homologado para a versão do Ubuntu Server 18.04.x LTS x64
-# Kernel >= 4.15.x
+# Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
+# Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
+# Data de criação: 18/10/2021
+# Data de atualização: 18/10/2021
+# Versão: 0.01
+# Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
+# Testado e homologado para a versão do OpenSSL v1.1.x e Apache2 v2.4.x
 
 #Configuração do Virtual Host do Site pti.intra na porta 80
 <VirtualHost *:80>
