--- a/scripts/conf/ntp.conf
+++ b/scripts/conf/ntp.conf
@@ -48,9 +48,7 @@ server c.ntp.br iburst
 # Configurações de restrição de acesso do NTP
 restrict 127.0.0.1
 restrict 127.0.1.1
-restrict -6 ::1
 restrict default kod limited nomodify notrap nopeer noquery
-restrict -6 default kod limited nomodify notrap nopeer noquery
 
-# Desabilitar o comando monlist
-disable monitor
+# Habilitando o serviço o comando monlist
+enable monitor
