--- a/scripts/conf/vsftpd.conf
+++ b/scripts/conf/vsftpd.conf
@@ -6,16 +6,16 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 18/10/2021
-# Data de atualização: 18/10/2021
-# Versão: 0.01
+# Data de atualização: 20/10/2021
+# Versão: 0.02
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 # Testado e homologado para a versão do Vsftpd Server v3.0.x
 
-# Desativar a execução autonoma do Vsftpd Server
-listen=NO
+# Habilitar o suporte ao IPv4 do Vsftpd Server
+listen=YES
 #
-# Habilitar o suporte ao IPv6 do Vsftpd Server
-listen_ipv6=YES
+# Desabilitar o suporte ao IPv6 do Vsftpd Server
+listen_ipv6=NO
 #
 # Permitir FTP anônimo do Vsftpd Server (desabilitado por padrão)
 anonymous_enable=NO
