--- a/scripts/conf/mysql.conf
+++ b/scripts/conf/mysql.conf
@@ -3,14 +3,16 @@
 # Facebook: facebook.com/ProcedimentosEmTI
 # Facebook: facebook.com/BoraParaPratica
 # YouTube: youtube.com/BoraParaPratica
-# Data de criação: 02/10/2018
-# Data de atualização: 06/10/2018
-# Versão: 0.2
-# Testado e homologado para a versão do Ubuntu Server 18.04 LTS x64
-# Kernel >= 4.4.x
+# Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
+# Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
+# Data de criação: 02/11/2021
+# Data de atualização: 02/11/2021
+# Versão: 0.01
+# Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
+# Testado e homologado para a versão do LogAnalyzer v4.1.x
 
-# Configurações Globais
+# Configurações Globais do recurso de armazenamento de Log no MySQL
 
-#Habilitando o modulo do MySQL para suportar o Syslog/Rsyslog do LogAnalyzer
+# Habilitando o módulo do MySQL para suportar o Syslog/Rsyslog do LogAnalyzer
 $ModLoad ommysql
 *.* :ommysql:localhost,syslog,syslog,syslog
