--- a/scripts/conf/apache2.conf
+++ b/scripts/conf/apache2.conf
@@ -6,81 +6,98 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 15/10/2021
-# Data de atualização: 15/10/2021
-# Versão: 0.01
+# Data de atualização: 05/11/2021
+# Versão: 0.02
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 
 # Configurações Globais do Apache2
 
-# ServerRoot: The top of the directory tree under which the server's
-# configuration, error, and log files are kept.
-#ServerRoot "/etc/apache2"
+# Configuração da variável de Nome do Servidor Apache2 para responder
+# por nome 
+ServerName localhost
+ServerName 172.16.1.20
 
-# The accept serialization lock file MUST BE STORED ON A LOCAL DISK.
-#Mutex file:${APACHE_LOCK_DIR} default
+# O nome do arquivo a ser procurado em cada diretório para diretivas de 
+# configuração adicionais. Veja também AllowOverride diretiva.
+AccessFileName .htaccess
 
-# The directory where shm and other runtime files will be stored.
-DefaultRuntimeDir ${APACHE_RUN_DIR}
+# As linhas a seguir evitam que os arquivos .htaccess e .htpasswd sejam
+# visualizado por clientes da Web.
+<FilesMatch "^\.ht">
+	Require all denied
+</FilesMatch>
 
-# PidFile: The file in which the server should record its process
-# identification number when it starts.
-PidFile ${APACHE_PID_FILE}
-
-# Timeout: The number of seconds before receives and sends time out.
-Timeout 300
-
-# KeepAlive: Whether or not to allow persistent connections (more than
-# one request per connection). Set to "Off" to deactivate.
-KeepAlive On
-
-# MaxKeepAliveRequests: The maximum number of requests to allow
-# during a persistent connection. Set to 0 to allow an unlimited amount.
-# We recommend you leave this number high, for maximum performance.
-MaxKeepAliveRequests 100
-
-# KeepAliveTimeout: Number of seconds to wait for the next request from the
-# same client on the same connection.
-KeepAliveTimeout 5
-
-# These need to be set in /etc/apache2/envvars
-User ${APACHE_RUN_USER}
-Group ${APACHE_RUN_GROUP}
-
-# HostnameLookups: Log the names of clients or just their IP addresses
-# e.g., www.apache.org (on) or 204.62.129.132 (off).
-# The default is off because it'd be overall better for the net if people
-# had to knowingly turn this feature on, since enabling it means that
-# each client request will result in AT LEAST one lookup request to the
-# nameserver.
-HostnameLookups Off
-
-# ErrorLog: The location of the error log file.
-# If you do not specify an ErrorLog directive within a <VirtualHost>
-# container, error messages relating to that virtual host will be
-# logged here.  If you *do* define an error logfile for a <VirtualHost>
-# container, that host's errors will be logged there and not here.
-ErrorLog ${APACHE_LOG_DIR}/error.log
-
-# LogLevel: Control the severity of messages logged to the error_log.
-# Available values: trace8, ..., trace1, debug, info, notice, warn,
-# error, crit, alert, emerg.
-# It is also possible to configure the log level for particular modules, e.g.
-# "LogLevel info ssl:warn"
-LogLevel warn
-
-# Include module configuration:
+# Incluir a localização das configurações dos módulos
 IncludeOptional mods-enabled/*.load
 IncludeOptional mods-enabled/*.conf
 
-# Include list of ports to listen on
+# Incluir a lista de portas que o Apache irá escutar
 Include ports.conf
 
-# Sets the default security model of the Apache2 HTTPD server. It does
-# not allow access to the root filesystem outside of /usr/share and /var/www.
-# The former is used by web applications packaged in Debian,
-# the latter may be used for local directories served by the web server. If
-# your system is serving content from a sub-directory in /srv you must allow
-# access here, or in any related virtual host.
+# Incluir fragmentos genéricos de declarações
+IncludeOptional conf-enabled/*.conf
+
+# Inclua as configurações de host virtual:
+IncludeOptional sites-enabled/*.conf
+
+# O topo da árvore de diretórios sob a qual o servidor foi configurado, 
+# erro e arquivos de log são mantidos 
+#ServerRoot "/etc/apache2"
+
+# O arquivo de bloqueio de serialização de aceitação DEVE SER ARMAZENADO 
+# EM UM DISCO LOCAL.
+#Mutex file:${APACHE_LOCK_DIR} default
+
+# O diretório onde shm e outros arquivos de tempo de execução serão armazenados.
+DefaultRuntimeDir ${APACHE_RUN_DIR}
+
+# O arquivo no qual o servidor deve registrar seu processo número de identificação 
+# ao iniciar.
+PidFile ${APACHE_PID_FILE}
+
+# O número de segundos antes de receber e enviar o tempo limite.
+Timeout 300
+
+# Permitir ou não conexões persistentes (mais de um pedido por conexão). Defina 
+# como "Desligado" para desativar.
+KeepAlive On
+
+# O número máximo de solicitações a permitir durante uma conexão persistente. Defina 
+# como 0 para permitir uma quantidade ilimitada. Recomendamos que você deixe este 
+# número alto, para obter o desempenho máximo.
+MaxKeepAliveRequests 100
+
+# Número de segundos para aguardar a próxima solicitação do mesmo cliente na mesma 
+# conexão.
+KeepAliveTimeout 5
+
+# Eles precisam ser configurados em /etc/apache2/envvars
+User ${APACHE_RUN_USER}
+Group ${APACHE_RUN_GROUP}
+
+# Registre os nomes dos clientes ou apenas seus endereços IP por exemplo, www.apache.org 
+# (ativado) ou 204.62.129.132 (desativado). O padrão é desligado porque seria melhor 
+# para a rede se as pessoas teve que conscientemente ativar esse recurso, pois ativá-lo 
+# significa que cada solicitação de cliente resultará em PELO MENOS uma solicitação de 
+# pesquisa para o nome do servidor.
+HostnameLookups Off
+
+# A localização do arquivo de log de erros. Se você não especificar uma diretiva ErrorLog 
+# em um <VirtualHost> container, as mensagens de erro relacionadas a esse host virtual serão
+# logado aqui. Se você * definir * um arquivo de log de erro para um <VirtualHost> container, 
+# os erros desse host serão registrados lá e não aqui.
+ErrorLog ${APACHE_LOG_DIR}/error.log
+
+# Controle a gravidade das mensagens registradas no error_log. Valores disponíveis: trace8, 
+# ..., trace1, debug, info, Notice, warn, erro, crítico, alerta, emerg. Também é possível 
+# configurar o nível de registro para módulos específicos, por exemplo, "LogLevel info ssl: warn"
+LogLevel warn
+
+# Define o modelo de segurança padrão do servidor Apache2 HTTPD. Faz não permite acesso ao 
+# sistema de arquivos raiz fora de / usr / share e / var / www. O primeiro é usado por 
+# aplicativos da web empacotados no Debian, o último pode ser usado para diretórios locais 
+# servidos pelo servidor da web. Se seu sistema está servindo conteúdo de um subdiretório 
+# em /srv que você deve permitir acesse aqui ou em qualquer host virtual relacionado.
 <Directory />
 	Options FollowSymLinks
 	AllowOverride None
@@ -104,41 +121,15 @@ Include ports.conf
 #	Require all granted
 #</Directory>
 
-# AccessFileName: The name of the file to look for in each directory
-# for additional configuration directives.  See also the AllowOverride
-# directive.
-AccessFileName .htaccess
-
-# The following lines prevent .htaccess and .htpasswd files from being
-# viewed by Web clients.
-<FilesMatch "^\.ht">
-	Require all denied
-</FilesMatch>
-
-# The following directives define some format nicknames for use with
-# a CustomLog directive.
-# These deviate from the Common Log Format definitions in that they use %O
-# (the actual bytes sent including headers) instead of %b (the size of the
-# requested file), because the latter makes it impossible to detect partial
-# requests.
-# Note that the use of %{X-Forwarded-For}i instead of %h is not recommended.
-# Use mod_remoteip instead.
+# As seguintes diretivas definem alguns apelidos de formato para uso com uma diretiva 
+# CustomLog. Estes desviam-se das definições de formato de log comum porque usam %O (os 
+# bytes reais enviados, incluindo cabeçalhos) em vez de %b (o tamanho do arquivo solicitado), 
+# porque o último torna impossível a detecção parcial solicitações de. Observe que o uso de 
+# %{X-Forwarded-For}i em vez de %h não é recomendado. Use mod_remoteip ao invés.
 LogFormat "%v:%p %h %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\"" vhost_combined
 LogFormat "%h %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\"" combined
 LogFormat "%h %l %u %t \"%r\" %>s %O" common
 LogFormat "%{Referer}i -> %U" referer
 LogFormat "%{User-agent}i" agent
 
-# Include of directories ignores editors' and dpkg's backup files,
-# see README.Debian for details.
-
-# Include generic snippets of statements
-IncludeOptional conf-enabled/*.conf
-
-# Include the virtual host configurations:
-IncludeOptional sites-enabled/*.conf
-
 # vim: syntax=apache ts=4 sw=4 sts=4 sr noet
-
-# Configuração da variável de Nome do Servidor 
-ServerName localhost
