--- a/scripts/conf/default-ssl.conf
+++ b/scripts/conf/default-ssl.conf
@@ -6,39 +6,40 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 18/10/2021
-# Data de atualização: 18/10/2021
-# Versão: 0.01
+# Data de atualização: 21/11/2021
+# Versão: 0.02
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 
+#Configuração do Módulo de SSL do Apache2
 <IfModule mod_ssl.c>
 
-	#Configuração do Virtual Host do Apache2 com suporte ao TLS/SSL na porta 443
+	#Configuração do Virtual Host do Apache2 para suportar o TLS/SSL na porta 443
 	<VirtualHost _default_:443>
 
-		#Configuração do Nome de Domínio e dos Apelidos
+		#Configuração do Nome de Domínio e dos Apelidos do Apache2
 		ServerName pti.intra
 		ServerAlias 172.16.1.20
   		ServerAlias ptispo01ws01
 		ServerAlias ptispo01ws01.pti.intra
 		ServerAlias www.pti.intra
 
-		#Email do administrador
+		#Email do administrador do Apache2
 		ServerAdmin webmaster@pti.intra
 		
-		#Pasta raiz da hospedagem
+		#Pasta raiz da hospedagem dos sites do Apache2
 		DocumentRoot /var/www/html
 		
-		#Configuração dos arquivos de log
+		#Configuração dos arquivos de Log do Apache2
 		ErrorLog ${APACHE_LOG_DIR}/error.log
 		CustomLog ${APACHE_LOG_DIR}/access.log combined
 
-		#Configuração do suporte ao SSL utilizando o certificado criado
+		#Configuração do suporte ao TLS/SSL utilizando o certificado criado pelo OpenSSL
 		SSLEngine on
-		SSLCertificateFile	/etc/ssl/newcerts/apache2-pticrt.crt
+		SSLCertificateFile /etc/ssl/newcerts/apache2-pticrt.crt
 		SSLCertificateKeyFile /etc/ssl/private/apache2-ptikey.key
 		SSLCertificateChainFile /etc/ssl/certs/ca-pticrt.pem
 
-		#Configuração padrão do suporte ao CGI, recomendado não alterar
+		#Configuração padrão do suporte ao CGI do Apache2, recomendado não alterar
 		<FilesMatch "\.(cgi|shtml|phtml|php)$">
 				SSLOptions +StdEnvVars
 		</FilesMatch>
@@ -46,7 +47,7 @@
 				SSLOptions +StdEnvVars
 		</Directory>
 
-		#Configuração do Alias da Pasta de Download para baixar a Unidade Certificadora
+		#Configuração do Alias da Pasta de Download para baixar a Unidade Certificadora CA
 		Alias /download /var/www/html/download
 		<Directory /var/www/html/download>
 			Options Indexes FollowSymLinks MultiViews
