--- a/scripts/conf/dhcpd.conf
+++ b/scripts/conf/dhcpd.conf
@@ -6,14 +6,12 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 10/10/2021
-# Data de atualização: 11/10/2021
-# Versão: 0.02
+# Data de atualização: 26/10/2021
+# Versão: 0.03
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 
 # Configurações Globais do ISC DHCP Server
 authoritative;
-default-lease-time 14400;
-max-lease-time 18000;
 use-host-decl-names on;
 one-lease-per-client on;
 allow unknown-clients;
@@ -22,13 +20,19 @@ update-static-leases on;
 update-optimization off;
 update-conflict-detection off;
 #
+# Configuração do tempo de aluguel dos Endereços IPv4 (minutos) do ISC DHCP Server
+default-lease-time 14400;
+max-lease-time 18000;
+#
 # Configuração do Log do ISC DHCP Server
 log-facility local7;
 #
-# Resolvendo a falha do Syslog de informações do DHCPINFORM e DHCPACK do Win7
+# Configuração do protocolo WPAD (Web Proxy Autodiscovery Protocol) do ISC DHCP Server
+# OBS: Essa opção também resolve a falha do Syslog de informações do DHCPINFORM e DHCPACK do Win7
 option wpad code 252 = text;
+#option wpad "http://172.16.1.20/wpad.dat";
 #
-# Configurações da integração do Bind9 DNS Server
+# Configurações da integração do Bind9 DNS Server com o ISC DHCP Server
 ddns-updates on;
 ddns-update-style interim;
 option domain-name "pti.intra";
@@ -53,7 +57,7 @@ zone 1.16.172.in-addr.arpa. {
 	key rndc-key;
 }
 #
-# Configuração do suporte ao Servidor TFTPD-HPA e Imagem de Boot PXE
+# Configuração do suporte ao Servidor TFTPD-HPA e Imagem de Boot PXE do ISC DHCP Server
 #allow booting;
 #allow bootp;
 #option option-128 code 128 = string;
@@ -82,6 +86,9 @@ subnet 172.16.1.0 netmask 255.255.255.0 {
 	option netbios-node-type 2;
 	# Desabilitando o WPAD referente a falha do DHCPINFORM e DHCPACK do Win7
 	option wpad "\n";
+	# Configuração do protocolo WPAD (Web Proxy Autodiscovery Protocol)
+	#option wpad code 252 = text;
+	#option wpad "http://172.16.1.20/wpad.dat";
 	# Configuração do Servidor TFTP-HPA e Imagem de Boot PXE
 	#next-server 172.16.1.20;
 	#filename "pxelinux.0";
