--- a/scripts/conf/glpi.conf
+++ b/scripts/conf/glpi.conf
@@ -3,22 +3,24 @@
 # Facebook: facebook.com/ProcedimentosEmTI
 # Facebook: facebook.com/BoraParaPratica
 # YouTube: youtube.com/BoraParaPratica
+# Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
+# Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 31/05/2016
-# Data de atualização: 23/07/2020
-# Versão: 0.12
-# Testado e homologado para a versão do Ubuntu Server 18.04 LTS x64
-# Kernel >= 4.4.x
+# Data de atualização: 30/11/2021
+# Versão: 0.13
+# Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 #
-
-#Configuração do diretório do GLPI Help Desk no Apache2
+# Configuração do diretório raiz do GLPI Help Desk no Apache2
 <Directory /var/www/html/glpi>
- AllowOverride All
+	AllowOverride All
 </Directory>
-
+#
+# Configuração do diretório de config do GLPI Help Desk
 <Directory /var/www/html/glpi/config>
 	Options -Indexes
 </Directory>
-
+#
+# Configuração do diretório de files do GLPI Help Desk
 <Directory /var/www/html/glpi/files> 
 	Options -Indexes
 </Directory>
