--- a/scripts/conf/glpi.conf
+++ b/scripts/conf/glpi.conf
@@ -10,17 +10,17 @@
 # Versão: 0.13
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 #
-# Configuração do diretório raiz do GLPI Help Desk no Apache2
+# Configuração da permissão do diretório raiz do GLPI Help Desk no Apache2
 <Directory /var/www/html/glpi>
 	AllowOverride All
 </Directory>
 #
-# Configuração do diretório de config do GLPI Help Desk
+# Configuração das opções do diretório de config do GLPI Help Desk
 <Directory /var/www/html/glpi/config>
 	Options -Indexes
 </Directory>
 #
-# Configuração do diretório de files do GLPI Help Desk
+# Configuração das opções do diretório de files do GLPI Help Desk
 <Directory /var/www/html/glpi/files> 
 	Options -Indexes
 </Directory>
