--- a/scripts/conf/dhcpd.conf
+++ b/scripts/conf/dhcpd.conf
@@ -6,8 +6,8 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 10/10/2021
-# Data de atualização: 01/12/2021
-# Versão: 0.04
+# Data de atualização: 03/12/2021
+# Versão: 0.05
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 
 # Configurações Globais do ISC DHCP Server
@@ -28,7 +28,7 @@ max-lease-time 18000;
 log-facility local7;
 #
 # Configuração do protocolo WPAD (Web Proxy Autodiscovery Protocol) do ISC DHCP Server
-# OBS: Essa opção também resolve a falha do Syslog de informações do DHCPINFORM e DHCPACK do Win7
+# OBS: Essa opção resolve a falha do Syslog de informações do DHCPINFORM e DHCPACK do Win7
 option wpad code 252 = text;
 #option wpad "http://172.16.1.20/wpad.dat";
 #
@@ -42,7 +42,12 @@ ddns-rev-domainname "1.16.172.in-addr.arpa.";
 #
 # Configuração da chave de autenticação entre Bind9 DNS Server e o ISC DHCP Server
 # Chave gerada com o comando: dnssec-keygen -r /dev/urandom -a HMAC-MD5 -b 128 -n USER vaamonde
-# Precisa ser a mesma chave utilizada no arquivo dhcpd.conf e named.conf.local
+# Opção do comando dnssec-keygen: Nas versões anteriores do BIND <9.13, os algoritmos HMAC 
+# podiam ser gerados para uso como chaves TSIG, esse recurso foi removido a partir do BIND 
+# >9.13, nesse cenário é recomendado utilizar o comando: tsig-keygen para gerar chaves TSIG. 
+# Chave gerada com o comando: tsig-keygen -a hmac-md5 vaamonde
+# A chave TSIG precisa ser a mesma configurada nos arquivos: dhcpd.conf, named.conf.local e rndc.key
+# Mais informações veja o script: 04-dhcpdns.sh (Integração do ISC DHCP Server e Bind9 DNS Server)
 key rndc-key { 
 	algorithm hmac-md5;
 	secret vaamonde;
