--- a/scripts/conf/facilemanager.conf
+++ b/scripts/conf/facilemanager.conf
@@ -3,14 +3,13 @@
 # Facebook: facebook.com/ProcedimentosEmTI
 # Facebook: facebook.com/BoraParaPratica
 # YouTube: youtube.com/BoraParaPratica
-# Data de criação: 20/05/2021
-# Data de atualização: 20/05/2021
-# Versão: 0.13
-# Testado e homologado para a versão do Ubuntu Server 18.04 LTS x64
-# Kernel >= 4.4.x
+# Data de criação: 03/12/2021
+# Data de atualização: 03/12/2021
+# Versão: 0.1
+# Testado e homologado para a versão do Ubuntu Server 20.04 LTS x64
 #
 
-#Configuração do diretório do GLPI Help Desk no Apache2
+#Configuração do diretório do FacileManager no Apache2
 <Directory /var/www/html/facilemanager/server>
 	AllowOverride All
 </Directory>
