--- a/scripts/conf/vsftpd.conf
+++ b/scripts/conf/vsftpd.conf
@@ -6,8 +6,8 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 18/10/2021
-# Data de atualização: 20/10/2021
-# Versão: 0.02
+# Data de atualização: 06/12/2021
+# Versão: 0.03
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 # Testado e homologado para a versão do Vsftpd Server v3.0.x
 
@@ -35,11 +35,11 @@ use_localtime=YES
 # Porta de origem das conexões de transferência de dados do FTP, porta padrão 20 (ftp-data).
 connect_from_port_20=YES
 #
-# Ativar os registros de uploads/downloads de arquivos/diretórios no Vsftpd Server
-xferlog_enable=YES
-xferlog_std_format=NO
-xferlog_file=/var/log/vsftpd.log
+# Ativar os registros/logging de uploads/downloads de arquivos/diretórios no Vsftpd Server
 log_ftp_protocol=YES
+xferlog_enable=YES
+xferlog_std_format=YES
+xferlog_file=/var/log/vsftpd.log
 debug_ssl=YES
 #
 # Habilitando o suporte do Syslog no Vsftp Server
@@ -73,7 +73,7 @@ max_per_ip=8
 pam_service_name=vsftpd
 #
 # Localização do certificado e chave RSA para conexão criptografada do Vsftp Server
-# Veja os procedimentos de criação de CA e Certificados no script: openssl.sh
+# Veja os procedimentos de criação de CA e Certificados no script: 08-openssl.sh
 ssl_enable=NO
 #rsa_cert_file=/etc/ssl/newcerts/vsftpd-pticrt.crt
 #rsa_private_key_file=/etc/ssl/private/vsftpd-ptikey.key
