--- a/scripts/conf/agent.cfg
+++ b/scripts/conf/agent.cfg
@@ -3,19 +3,21 @@
 # Facebook: facebook.com/ProcedimentosEmTI
 # Facebook: facebook.com/BoraParaPratica
 # YouTube: youtube.com/BoraParaPratica
-# Data de criação: 29/01/2018
-# Data de atualização: 29/01/2018
-# Versão: 0.1
-# Testado e homologado para a versão do Ubuntu Server 18.04 LTS x64
-# Kernel >= 4.4.x
+# Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
+# Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
+# Data de criação: 25/11/2021
+# Data de atualização: 02/12/2021
+# Versão: 0.03
+# Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
+# Testado e homologado para a versão do FusionInventory Server 9.5.x, Agent 2.6.x e GLPI 9.5.x
 
-#Endereço do Servidor do Fusion Inventory
+#Endereço do Servidor do FusionInventory do GLPI Help Desk
 server = http://localhost/glpi/plugins/fusioninventory/
 
-#Diretório temporário
+#Diretório temporário utilizado pelo inventário
 local = /tmp
 
-#Atraso máximo antes do primeiro inventário, em segundos
+#Atraso máximo antes do primeiro inventário, configuração em segundos
 delaytime = 3600
 
 #Não entre em contato com o servidor antes da próxima hora agendada
@@ -30,10 +32,10 @@ scan-profiles = 0
 #Salvar inventario como HTML
 html = 0
 
-#Tempo limite para a execução de módulos de inventário
+#Tempo limite para a execução dos módulos de inventário
 backend-collect-timeout = 180
 
-#Sempre envie dados para o servidor
+#Sempre enviar dados do inventário para o servidor
 force = 0
 
 #Não use peer-to-peer para baixar arquivos
@@ -48,7 +50,7 @@ ca-cert-file =
 #Não verifique o certificado SSL do servidor
 no-ssl-check = 0
 
-#Tempo máximo de conenxão
+#Tempo máximo de conenxão com o servidor
 timeout = 180
 
 #Desativar o servidor web incorporado
@@ -57,13 +59,13 @@ no-httpd = 0
 #Interface de rede para ouvir
 httpd-ip =
 
-#Configuração da Porta de comunicação do Fusion Inventory e GLPI
+#Configuração da Porta de comunicação do FusionInventory do GLPI
 httpd-port = 62354
 
 #Configuração da sada de erro
 logger = stderr
 
-#Arquivo de Log do inventario
+#Arquivo de Log do inventário
 logfile = /var/log/fusioninventory-agent/fusioninventory.log
 
 #Tamanho máximo do Log em MB
@@ -75,7 +77,7 @@ logfacility = LOG_USER
 #Usar o console colorido
 color = 1
 
-#Adicionar a TAG para o resultado do inventario
+#Adicionar a TAG para o resultado do inventário
 tag = Server
 
 #Modo de Debug
