--- a/scripts/conf/nsswitch.conf
+++ b/scripts/conf/nsswitch.conf
@@ -6,25 +6,28 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 17/10/2021
-# Data de atualização: 17/10/2021
-# Versão: 0.01
+# Data de atualização: 08/12/2021
+# Versão: 0.02
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 #
-# Configuração de acesso a informações de usuários, grupos e senhas.
+# Configuração do acesso a informações de usuários, grupos e senhas.
+# Padrão consultar primeiro os arquivos (files) depois o sistema (systemd)
 passwd:         files systemd
 group:          files systemd
 shadow:         files
 gshadow:        files
 
-# Configuração da forma de resolução de nomes de computadores
+# Configuração da forma de resolução de nomes de computadores.
+# Padrão consultar primeiro os arquivos (files) depois o serviço de DNS
 hosts:          files dns
 networks:       files
 
-# Configuração da consultado dos serviços de rede
+# Configuração da consultada dos serviços de rede
+# Padrão consultar primeiro o banco de dados local (db) depois os arquivos (files)
 protocols:      db files
 services:       db files
 ethers:         db files
 rpc:            db files
 
-# Configuração da consulta de resolução do serviço de Grupos de Rede
+# Configuração da consulta de resolução do serviço de Grupos de Rede NIS
 netgroup:       nis
