--- a/scripts/conf/nsswitch.conf
+++ b/scripts/conf/nsswitch.conf
@@ -29,5 +29,6 @@ services:       db files
 ethers:         db files
 rpc:            db files
 
-# Configuração da consulta de resolução do serviço de Grupos de Rede NIS
+# Configuração da consulta de resolução do serviço de Grupos de Rede
+# Padrão consultar primeiro os serviço de rede NIS (Network Information Service)
 netgroup:       nis
