--- a/scripts/conf/ntp.conf
+++ b/scripts/conf/ntp.conf
@@ -6,19 +6,19 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 10/10/2021
-# Data de atualização: 20/10/2021
-# Versão: 0.02
+# Data de atualização: 09/12/2021
+# Versão: 0.03
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 
 # Mais informações sobre as configurações do ntp.conf acesse os sites:
 # Site1: http://ntp.br/guia-linux-avancado.php
 # Site2: http://www.pool.ntp.org/pt/zone/br
 
-# "memoria" para o escorregamento de frequência do micro pode ser necessário criar esse 
-# arquivo manualmente com o comando touch ntp.drift seu conteúdo inicial é: 0.0
+# "memoria" para o escorregamento de frequência do micro, pode ser necessário criar esse 
+# arquivo manualmente com o comando touch ntp.drift, seu conteúdo inicial é: 0.0
 driftfile /var/lib/ntp/ntp.drift
 
-# Estatísticas do ntp que permitem verificar o histórico de funcionamento e gerar gráficos
+# Estatísticas do NTP que permitem verificar o histórico de funcionamento e gerar gráficos
 enable stats
 statsdir /var/log/ntpstats/
 statistics loopstats peerstats clockstats
@@ -26,7 +26,7 @@ filegen loopstats file loopstats type day enable
 filegen peerstats file peerstats type day enable
 filegen clockstats file clockstats type day enable
 
-# Configuração do Logo do NTP Server
+# Configuração do Log do NTP Server
 logconfig =syncall +clockall
 
 # Configuração da Interface de Rede permitida do NTP Server
@@ -39,16 +39,16 @@ server b.st1.ntp.br iburst
 server c.st1.ntp.br iburst
 server d.st1.ntp.br iburst
 
-# Outros servidores públicos do projeto ntp.br suporte somente ao IPv4
+# Outros servidores públicos do projeto ntp.br com suporte somente ao IPv4
 server gps.ntp.br iburst
 server a.ntp.br iburst
 server b.ntp.br iburst
 server c.ntp.br iburst
 
-# Configurações de restrição de acesso do NTP
+# Configuração da restrição de acesso ao NTP Server
 restrict 127.0.0.1
 restrict 127.0.1.1
 restrict default kod limited nomodify notrap nopeer noquery
 
-# Habilitando o serviço o comando monlist
+# Habilitando o serviço do comando monlist
 enable monitor
