--- a/scripts/conf/wordpress.conf
+++ b/scripts/conf/wordpress.conf
@@ -6,10 +6,10 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 18/10/2021
-# Data de atualização: 18/10/2021
-# Versão: 0.01
+# Data de atualização: 09/12/2021
+# Versão: 0.02
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
-# Testado e homologado para a versão do OpenSSL v1.1.x e Apache2 v2.4.x
+# Testado e homologado para a versão do Apache2 v2.4.x e Wordpress v5.8.x
 
 #Configuração do Virtual Host do Wordpress no Apache2 na porta padrão 80
 <VirtualHost *:80>
@@ -21,8 +21,8 @@
 	ServerName  wp.pti.intra
 	ServerAlias portal.pti.intra
  
-	# Configuração do suporte aos arquivo index.php e index.html
-	DirectoryIndex index.php index.html
+	# Configuração do suporte aos arquivo index.php, index.html e install.php
+	DirectoryIndex index.php index.html install.php
 
 	# Diretório raiz da hospedagem do Wordpress
 	DocumentRoot /var/www/html/wp/
@@ -36,18 +36,19 @@
 	</Directory>
 
 	# Configuração dos módulos de segurança de acesso ao Wordpress
-	<IfModule mod_rewrite.c>
-		RewriteEngine On
-		RewriteRule ^index\.php$ - [L]
-		RewriteCond $1 ^(index\.php)?$ [OR]
-		RewriteCond $1 \.(gif|jpg|png|ico|css|js)$ [NC,OR]
-		RewriteCond %{REQUEST_FILENAME} -f [OR]
-		RewriteCond %{REQUEST_FILENAME} -d
-		RewriteRule ^(.*)$ - [S=1]
-		RewriteRule . /index.php [L]
-	</IfModule>
+	# Descomentar essas linhas após a configuração do Wordpress
+	#<IfModule mod_rewrite.c>
+	#	RewriteEngine On
+	#	RewriteRule ^index\.php$ - [L]
+	#	RewriteCond $1 ^(index\.php)?$ [OR]
+	#	RewriteCond $1 \.(gif|jpg|png|ico|css|js)$ [NC,OR]
+	#	RewriteCond %{REQUEST_FILENAME} -f [OR]
+	#	RewriteCond %{REQUEST_FILENAME} -d
+	#	RewriteRule ^(.*)$ - [S=1]
+	#	RewriteRule . /index.php [L]
+	#</IfModule>
 
- 	# Configuração dos arquivos de log do Wordpress
+ 	# Configuração dos arquivos de Log do Wordpress
 	ErrorLog ${APACHE_LOG_DIR}/error-wordpress.log
 	CustomLog ${APACHE_LOG_DIR}/access-wordpress.log combined
 	
