--- a/scripts/conf/ntp.conf
+++ b/scripts/conf/ntp.conf
@@ -6,8 +6,8 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 10/10/2021
-# Data de atualização: 09/12/2021
-# Versão: 0.03
+# Data de atualização: 10/12/2021
+# Versão: 0.04
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 
 # Mais informações sobre as configurações do ntp.conf acesse os sites:
@@ -17,6 +17,9 @@
 # "memoria" para o escorregamento de frequência do micro, pode ser necessário criar esse 
 # arquivo manualmente com o comando touch ntp.drift, seu conteúdo inicial é: 0.0
 driftfile /var/lib/ntp/ntp.drift
+
+# Definição de segundos bissextos fornecida por tzdata
+leapfile /usr/share/zoneinfo/leap-seconds.list
 
 # Estatísticas do NTP que permitem verificar o histórico de funcionamento e gerar gráficos
 enable stats
