--- a/scripts/conf/pti-ca.conf
+++ b/scripts/conf/pti-ca.conf
@@ -6,16 +6,18 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 18/10/2021
-# Data de atualização: 18/10/2021
-# Versão: 0.01
+# Data de atualização: 10/12/2021
+# Versão: 0.02
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 # Testado e homologado para a versão do OpenSSL v1.1.x
 
+# Bloco de configuração do pedido de certificado PKCS#10 e comando de geração de certificado.
 [ req ]
 distinguished_name=subject
 x509_extensions=v3_ca
 prompt=yes
 
+# Bloco de configuração das informações do Subject da CA e dos certificados.
 [ subject ]
 countryName=Country Name (2 letter code)
 countryName_min=2
@@ -36,9 +38,13 @@ emailAddress=Email Address
 emailAddress_max=64
 emailAddress_default=pti@pti.intra
 
+# Bloco de configuração básica da CA.
+# Define a maneira como a CA atua ao usar o comando ca para assinar certificados.
 [ ca ]
 default_ca=CA_default
 
+# Bloco de configuração avançadas da CA.
+# Define os parametros avançados da criação e geração da CA e certificados.
 [ CA_default ]
 dir=/etc/ssl
 new_certs_dir=$dir/newcerts
@@ -56,6 +62,8 @@ unique_subject=no
 policy=policy_match
 default_days=3650
 
+# Bloco de configuração das políticas de conteúdo da CA.
+# Todos os campos listados como "match" devem conter exatamente o mesmo conteúdo no DN do CA
 [ policy_match ]
 countryName=match
 stateOrProvinceName=optional
@@ -64,6 +72,8 @@ organizationalUnitName=optional
 commonName=supplied
 emailAddress=optional
 
+# Bloco de configuração das requisições x509 da CA.
+# Esta seção define extensões x509 v3 a serem solicitadas em nossas solicitações. 
 [ v3_ca ]
 subjectKeyIdentifier=hash
 authorityKeyIdentifier=keyid:always,issuer
