--- a/scripts/conf/dhcpd.conf
+++ b/scripts/conf/dhcpd.conf
@@ -6,7 +6,7 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 10/10/2021
-# Data de atualização: 03/12/2021
+# Data de atualização: 10/12/2021
 # Versão: 0.05
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 
@@ -37,8 +37,7 @@ ddns-updates on;
 ddns-update-style interim;
 option domain-name "pti.intra";
 ddns-domainname "pti.intra.";
-ddns-rev-domainname "1.16.172.in-addr.arpa.";
-#ddns-rev-domainname "in-addr.arpa.";
+ddns-rev-domainname "in-addr.arpa.";
 #
 # Configuração da chave de autenticação entre Bind9 DNS Server e o ISC DHCP Server
 # Chave gerada com o comando: dnssec-keygen -r /dev/urandom -a HMAC-MD5 -b 128 -n USER vaamonde
