--- a/scripts/conf/named.conf
+++ b/scripts/conf/named.conf
@@ -6,11 +6,14 @@
 // Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 // Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 // Data de criação: 10/10/2021
-// Data de atualização: 11/10/2021
-// Versão: 0.02
+// Data de atualização: 10/12/2021
+// Versão: 0.03
 // Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 
 // Configuração padrão do arquivo named.conf do Bind9 DNS Server
+// Esse arquivo apenas informa a localização dos principais arquivos de 
+// configuração do Bind9 DNS Server, não sendo mais utilizado como arquivo
+// principal de configuração do serviço de resolução de nomes.
 include "/etc/bind/named.conf.options";
 include "/etc/bind/named.conf.local";
 include "/etc/bind/named.conf.default-zones";
