--- a/scripts/conf/vsftpd-ssl.conf
+++ b/scripts/conf/vsftpd-ssl.conf
@@ -6,11 +6,12 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 18/10/2021
-# Data de atualização: 18/10/2021
-# Versão: 0.01
+# Data de atualização: 10/12/2021
+# Versão: 0.02
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 # Testado e homologado para a versão do OpenSSL 1.1.x e VSFTPD v3.0.x
 
+# Bloco de configuração do pedido de certificado PKCS#10 e comando de geração de certificado.
 [ req ]
 distinguished_name=subject
 req_extensions=v3_req
@@ -18,6 +19,7 @@ x509_extensions=v3_req
 string_mask=utf8only
 prompt=yes
 
+# Bloco de configuração das informações do Subject da CA e dos certificados.
 [ subject ]
 countryName=Country Name (2 letter code)
 countryName_min=2
@@ -38,9 +40,13 @@ emailAddress=Email Address
 emailAddress_max=64
 emailAddress_default=pti@pti.intra
 
+# Bloco de configuração básica da CA.
+# Define a maneira como a CA atua ao usar o comando ca para assinar certificados.
 [ ca ]
 default_ca=CA_default
 
+# Bloco de configuração avançadas da CA.
+# Define os parametros avançados da criação e geração da CA e certificado
 [ CA_default ]
 dir=/etc/ssl
 new_certs_dir=$dir/newcerts
@@ -58,6 +64,8 @@ unique_subject=no
 policy=policy_match
 default_days=3650
 
+# Bloco de configuração das políticas de conteúdo da CA.
+# Todos os campos listados como "match" devem conter exatamente o mesmo conteúdo no DN do CA
 [ policy_match ]
 countryName=match
 stateOrProvinceName=optional
@@ -66,6 +74,8 @@ organizationalUnitName=optional
 commonName=supplied
 emailAddress=optional
 
+# Bloco de configuração das requisições x509 da CA.
+# Esta seção define extensões x509 v3 a serem solicitadas em nossas solicitações.
 [ v3_req ]
 nsComment="Certificado Gerado pelo OpenSSL"
 nsCertType=server
@@ -75,6 +85,7 @@ basicConstraints=CA:FALSE
 keyUsage=digitalSignature,keyAgreement,keyEncipherment,dataEncipherment,nonRepudiation
 subjectAltName=@alternate_names
 
+# Bloco de configuração dos nomes alternativos do certificado
 [ alternate_names ]
 IP.1=172.16.1.20
 DNS.1=ptispo01ws01.pti.intra
