--- a/scripts/conf/apache.conf
+++ b/scripts/conf/apache.conf
@@ -3,13 +3,16 @@
 # Facebook: facebook.com/ProcedimentosEmTI
 # Facebook: facebook.com/BoraParaPratica
 # YouTube: youtube.com/BoraParaPratica
-# Data de criação: 03/08/2020
-# Data de atualização: 04/08/2020
-# Versão: 0.1
-# Testado e homologado para a versão do Ubuntu Server 18.04 LTS x64
-# Kernel >= 4.15.x
+# Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
+# Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
+# Data de criação: 11/12/2021
+# Data de atualização: 11/12/2021
+# Versão: 0.01
+# Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
+# Testado e homologado para a versão do Zabbix Server e Agent V5.5.x 
 
 # Configuração do Apache2 para suportar as configurações do Zabbix
+# Arquivo não sofreu alteração, manteve a mesma da instalação.
 <IfModule mod_alias.c>
     Alias /zabbix /usr/share/zabbix
 </IfModule>
@@ -20,16 +23,6 @@
     Order allow,deny
     Allow from all
 
-    <IfModule mod_php5.c>
-        php_value max_execution_time 300
-        php_value memory_limit 128M
-        php_value post_max_size 16M
-        php_value upload_max_filesize 2M
-        php_value max_input_time 300
-        php_value max_input_vars 10000
-        php_value always_populate_raw_post_data -1
-        php_value date.timezone America/Sao_Paulo
-    </IfModule>
     <IfModule mod_php7.c>
         php_value max_execution_time 300
         php_value memory_limit 128M
@@ -38,7 +31,7 @@
         php_value max_input_time 300
         php_value max_input_vars 10000
         php_value always_populate_raw_post_data -1
-        php_value date.timezone America/Sao_Paulo
+        # php_value date.timezone Europe/Riga
     </IfModule>
 </Directory>
 
@@ -61,15 +54,6 @@
 </Directory>
 
 <Directory "/usr/share/zabbix/include">
-    Order deny,allow
-    Deny from all
-    <files *.php>
-        Order deny,allow
-        Deny from all
-    </files>
-</Directory>
-
-<Directory "/usr/share/zabbix/local">
     Order deny,allow
     Deny from all
     <files *.php>
