--- a/scripts/conf/zabbix_server.conf
+++ b/scripts/conf/zabbix_server.conf
@@ -3,11 +3,13 @@
 # Facebook: facebook.com/ProcedimentosEmTI
 # Facebook: facebook.com/BoraParaPratica
 # YouTube: youtube.com/BoraParaPratica
-# Data de criação: 03/08/2020
-# Data de atualização: 01/01/2021
-# Versão: 0.2
-# Testado e homologado para a versão do Ubuntu Server 18.04 LTS x64
-# Kernel >= 4.15.x
+# Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
+# Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
+# Data de criação: 11/12/2021
+# Data de atualização: 11/12/2021
+# Versão: 0.01
+# Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
+# Testado e homologado para a versão do Zabbix Server e Agent V5.5.x 
 
 # Configuração padrão do Zabbix Server, configurações avançadas eu recomendo você ler os
 # manuais de configuração e customização do Zabbix Server no site Oficial.
@@ -28,8 +30,8 @@ LogFileSize=0
 LogSlowQueries=3000
 #
 #Variáveis do Processo do Zabbix
-PidFile=/var/run/zabbix/zabbix_server.pid
-SocketDir=/var/run/zabbix
+PidFile=/run/zabbix/zabbix_server.pid
+SocketDir=/run/zabbix
 #
 #Variáveis padrão do Zabbix, alterar somente se necessário
 Timeout=4
