--- a/scripts/conf/zabbix_agentd.conf
+++ b/scripts/conf/zabbix_agentd.conf
@@ -3,31 +3,33 @@
 # Facebook: facebook.com/ProcedimentosEmTI
 # Facebook: facebook.com/BoraParaPratica
 # YouTube: youtube.com/BoraParaPratica
-# Data de criação: 03/08/2020
-# Data de atualização: 01/01/2021
-# Versão: 0.2
-# Testado e homologado para a versão do Ubuntu Server 18.04 LTS x64
-# Kernel >= 4.15.x
+# Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
+# Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
+# Data de criação: 11/12/2021
+# Data de atualização: 11/12/2021
+# Versão: 0.01
+# Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
+# Testado e homologado para a versão do Zabbix Server e Agent V5.5.x 
 
 # Configuração padrão do Zabbix Agent, configurações avançadas eu recomendo você ler os
 # manuais de configuração e customização do Zabbix Agent no site Oficial.
 #
-#Variável do nome do Servidor do Zabbix
+# Variável do nome do Servidor do Zabbix
 Hostname=ptispo01ws01
 #
-#Variáveis do endereço IPv4 do Servidor do Zabbix
+# Variáveis do endereço IPv4 do Servidor do Zabbix
 Server=127.0.0.1
 ServerActive=127.0.0.1
 #
-#Variáveis da Inicialização e Debug do Agente do Zabbix
+# Variáveis da Inicialização e Debug do Agente do Zabbix
 StartAgents=3
 DebugLevel=3
 Timeout=3
 #
-#Variáveis do Processo e Log do Agente do Zabbix
-PidFile=/var/run/zabbix/zabbix_agentd.pid
+# Variáveis do Processo e Log do Agente do Zabbix
+PidFile=/run/zabbix/zabbix_agentd.pid
 LogFile=/var/log/zabbix/zabbix_agentd.log
 LogFileSize=0
 #
-#Variável das configurações do Agente do Zabbix
+# Variável das configurações do Agente do Zabbix
 Include=/etc/zabbix/zabbix_agentd.d/*.conf
