--- a/scripts/conf/apache2.conf
+++ b/scripts/conf/apache2.conf
@@ -16,6 +16,8 @@
 # por nome 
 ServerName localhost
 ServerName 172.16.1.20
+ServerName ptispo01ws01
+ServerName ptispo01ws01.pti.intra
 
 # O nome do arquivo a ser procurado em cada diretório para diretivas de 
 # configuração adicionais. Veja também AllowOverride diretiva.
