--- a/scripts/conf/netdata/bind_rndc.conf
+++ b/scripts/conf/netdata/bind_rndc.conf
@@ -1,50 +1,17 @@
-#
+# Autor: Robson Vaamonde
+# Site: www.procedimentosemti.com.br
+# Facebook: facebook.com/ProcedimentosEmTI
+# Facebook: facebook.com/BoraParaPratica
+# YouTube: youtube.com/BoraParaPratica
+# Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
+# Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
+# Data de criação: 02/11/2021
+# Data de atualização: 13/12/2021
+# Versão: 0.06
+# Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
+# Testado e homologado para a versão do Netdata v1.32.x
+
+# Configuração do Job das Estatísticas do Bind9 DNS Sever
  job_name:
      name: dnspti
      named_stats_path: '/var/log/named/named.stats'
-#------------------------------------------------------------------------------------------------------------------
-# IMPORTANT Information
-#
-# BIND APPEND logs at EVERY RUN. Its NOT RECOMMENDED to set update_every below 30 sec.
-# STRONGLY RECOMMENDED to create a bind-rndc conf file for logrotate
-#
-# To set up your BIND to dump stats do the following:
-#
-# 1. add to 'named.conf.options' options {}: 
-# statistics-file "/var/log/bind/named.stats";
-#
-# 2. Create bind/ directory in /var/log
-# cd /var/log/ && mkdir bind
-#
-# 3. Change owner of directory to 'bind' user
-# chown bind bind/
-#
-# 4. RELOAD (NOT restart) BIND
-# systemctl reload bind9.service
-#
-# 5. Run as a root 'rndc stats' to dump (BIND will create named.stats in new directory)
-# 
-#
-# To ALLOW NETDATA TO RUN 'rndc stats' change '/etc/bind/rndc.key' group to netdata
-# chown :netdata rndc.key
-#
-# The last BUT NOT least is to create bind-rndc.conf in logrotate.d/
-# The working one
-#  /var/log/bind/named.stats {
-#   
-#     daily
-#     rotate 4
-#     compress
-#     delaycompress
-#     create 0644 bind bind
-#     missingok
-#     postrotate
-#         rndc reload > /dev/null
-#     endscript
-# }
-#
-# To test your logrotate conf file run as root:
-#
-# logrotate /etc/logrotate.d/bind-rndc -d (debug dry-run mode)
-#
-# ----------------------------------------------------------------------
