--- a/scripts/conf/netdata/mysql.conf
+++ b/scripts/conf/netdata/mysql.conf
@@ -1,4 +1,17 @@
-# 
+# Autor: Robson Vaamonde
+# Site: www.procedimentosemti.com.br
+# Facebook: facebook.com/ProcedimentosEmTI
+# Facebook: facebook.com/BoraParaPratica
+# YouTube: youtube.com/BoraParaPratica
+# Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
+# Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
+# Data de criação: 02/11/2021
+# Data de atualização: 13/12/2021
+# Versão: 0.06
+# Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
+# Testado e homologado para a versão do Netdata v1.32.x
+
+# Configuração do Job de monitoramento do MySQL Server
 mycnf1:
   name     : 'local'
   'my.cnf' : '/etc/mysql/mysql.conf/mysqld.cnf'
