--- a/scripts/conf/dhcp/dhcpd.conf
+++ b/scripts/conf/dhcp/dhcpd.conf
@@ -6,17 +6,18 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 10/10/2021
-# Data de atualização: 10/12/2021
-# Versão: 0.05
+# Data de atualização: 14/12/2021
+# Versão: 0.06
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 
-# Configurações Globais do ISC DHCP Server
+# Configuração do Servidor Autoritativo do ISC DHCP Server da rede
 authoritative;
+
+# Configurações Globais do ISC DHCP Server de todos os escopos da rede
 use-host-decl-names on;
 one-lease-per-client on;
 allow unknown-clients;
 ignore client-updates;
-update-static-leases on;
 update-optimization off;
 update-conflict-detection off;
 #
@@ -28,11 +29,11 @@ max-lease-time 18000;
 log-facility local7;
 #
 # Configuração do protocolo WPAD (Web Proxy Autodiscovery Protocol) do ISC DHCP Server
-# OBS: Essa opção resolve a falha do Syslog de informações do DHCPINFORM e DHCPACK do Win7
 option wpad code 252 = text;
 #option wpad "http://172.16.1.20/wpad.dat";
 #
 # Configurações da integração do Bind9 DNS Server com o ISC DHCP Server
+update-static-leases on;
 ddns-updates on;
 ddns-update-style interim;
 option domain-name "pti.intra";
@@ -63,11 +64,11 @@ zone 1.16.172.in-addr.arpa. {
 }
 #
 # Configuração do suporte ao Servidor TFTPD-HPA e Imagem de Boot PXE do ISC DHCP Server
-#allow booting;
-#allow bootp;
-#option option-128 code 128 = string;
-#option option-129 code 129 = text;
-#next-server 172.16.1.20;
+allow booting;
+allow bootp;
+option option-128 code 128 = string;
+option option-129 code 129 = text;
+next-server 172.16.1.20;
 #filename "pxelinux.0";
 #
 # Configuração do Escopo Padrão da Subrede 172.16.1.0/24
@@ -90,12 +91,13 @@ subnet 172.16.1.0 netmask 255.255.255.0 {
 	option netbios-name-servers 172.16.1.20;
 	option netbios-node-type 2;
 	# Desabilitando o WPAD referente a falha do DHCPINFORM e DHCPACK do Win7
+	# OBS: Essa opção resolve a falha do Syslog de informações do DHCPINFORM e DHCPACK do Win7
 	option wpad "\n";
 	# Configuração do protocolo WPAD (Web Proxy Autodiscovery Protocol)
 	#option wpad code 252 = text;
 	#option wpad "http://172.16.1.20/wpad.dat";
 	# Configuração do Servidor TFTP-HPA e Imagem de Boot PXE
-	#next-server 172.16.1.20;
+	next-server 172.16.1.20;
 	#filename "pxelinux.0";
 }
 #
@@ -108,6 +110,6 @@ host ptispo01dt001 {
    # Endereço IPv4 fixado/reservado do escopo
    fixed-address 172.16.1.100;
    # Configuração do Servidor TFTP-HPA e Imagem de Boot PXE
-   #next-server 172.16.1.20;
+   next-server 172.16.1.20;
    #filename "pxelinux.0";
 }
