--- a/scripts/conf/wordpress/wordpress.conf
+++ b/scripts/conf/wordpress/wordpress.conf
@@ -6,8 +6,8 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 18/10/2021
-# Data de atualização: 09/12/2021
-# Versão: 0.02
+# Data de atualização: 14/12/2021
+# Versão: 0.03
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 # Testado e homologado para a versão do Apache2 v2.4.x e Wordpress v5.8.x
 
@@ -37,16 +37,16 @@
 
 	# Configuração dos módulos de segurança de acesso ao Wordpress
 	# Descomentar essas linhas após a configuração do Wordpress
-	#<IfModule mod_rewrite.c>
-	#	RewriteEngine On
-	#	RewriteRule ^index\.php$ - [L]
-	#	RewriteCond $1 ^(index\.php)?$ [OR]
-	#	RewriteCond $1 \.(gif|jpg|png|ico|css|js)$ [NC,OR]
-	#	RewriteCond %{REQUEST_FILENAME} -f [OR]
-	#	RewriteCond %{REQUEST_FILENAME} -d
-	#	RewriteRule ^(.*)$ - [S=1]
-	#	RewriteRule . /index.php [L]
-	#</IfModule>
+	<IfModule mod_rewrite.c>
+		RewriteEngine On
+		RewriteRule ^index\.php$ - [L]
+		RewriteCond $1 ^(index\.php)?$ [OR]
+		RewriteCond $1 \.(gif|jpg|png|ico|css|js)$ [NC,OR]
+		RewriteCond %{REQUEST_FILENAME} -f [OR]
+		RewriteCond %{REQUEST_FILENAME} -d
+		RewriteRule ^(.*)$ - [S=1]
+		RewriteRule . /index.php [L]
+	</IfModule>
 
  	# Configuração dos arquivos de Log do Wordpress
 	ErrorLog ${APACHE_LOG_DIR}/error-wordpress.log
